[package]
name = "perf-format"
version = "0.1.0"
authors = ["Phantomical <phantom@lynches.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
twox-hash = "1.5"
